--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ html {
 
 }
 
+.row {
+	/*margin-right:0 !important;*/
+}
+
 /*****************************
 
 HEADER :CONTACT
@@ -94,7 +98,7 @@ HEADER : MENU
 }
 
 #menu a {
-	color:#f7c670;
+	color:#363636;
 	text-decoration:none;
 }
 
@@ -105,6 +109,10 @@ HEADER : MENU
 	width:60%;
 }
 
+#menu a:hover {
+	color:#f7c670;
+}
+
 /*****************************
 
 HEADER : IMAGE
@@ -113,6 +121,7 @@ HEADER : IMAGE
 
 #header-img img{
 	max-width:100%;
+	width:1349px;
 }
 
 /*****************************
@@ -123,15 +132,16 @@ MAIN : BACKGROUNG
 
 #background {
 	position:relative;
+	margin-left:-15px;
 }
 
 #big-bloc {
   background-color:#d7d7d7;
   position: absolute;
-  top:470px;
+  top:483px;
   left: 0px;
   width:100%;
-  height: 838px;
+  height: 930px;
   transform: skewY(-20deg);
   -webkit-transform: skewY(-20deg);
   -ms-transform: skewY(-20deg);
@@ -140,10 +150,10 @@ MAIN : BACKGROUNG
 #small-bloc {
   background-color:#d7d7d7;
   position: absolute;
-  top:1836px;
+  top:1950px;
   left: 0px;
   width:100%;
-  height: 434px;
+  height: 400px;
   transform: skewY(-20deg);
   -webkit-transform: skewY(-20deg);
   -ms-transform: skewY(-20deg);
@@ -156,7 +166,7 @@ MAIN : GENERAL
 *****************************/
 
 main {
-	/*border-left:10px solid #f7c670;*/
+	border-left:10px solid #f7c670;
 	width:100%;
 }
 
@@ -252,7 +262,7 @@ MAIN : WOMEN SECTION
 }
 
 #title-women {
-	margin-top:320px;
+	margin-top:300px;
 	text-align:right;
 }
 
@@ -324,6 +334,7 @@ MAIN : ACCESSORIES SECTION
 
 #accessories {
 	padding:60px 0;
+	height:750px;
 }
 
 #accessories-img img{
@@ -376,4 +387,37 @@ MAIN : ACCESSORIES SECTION
 
 #title-accessories {
 	margin-top:510px;
+}
+
+/*****************************
+
+FOOTER
+
+*****************************/7
+
+footer {
+	position:relative;
+}
+
+#address {
+	background-color:#0001a2;
+	color:white; 
+	text-align:center;
+	padding:50px 0;
+}
+
+footer p {
+	margin:0;
+}
+
+#address-display {
+	display:flex;
+	justify-content:space-around;
+}
+
+#blue {
+	position:absolute;
+	background-color:#0001a2;
+	width:390px;
+	height:200px;
 }
